# mcp-advisor

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/mcp_advisor/: __init__.py  server.py  tools.py  views.py
