[project]
name = "mcp-advisor"
version = "0.1.0"
description = "MCP server to browse, search, and discover MCP servers from the MCP Advisor registry"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "registry", "advisor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-advisor = "mcp_advisor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_advisor"]

[tool.ruff]
target-version = "py311"
line-length = 100
